--- a/sbin/mount_isofs/Makefile
+++ b/sbin/mount_isofs/Makefile
@@ -1,6 +1,5 @@
-#	$Header: /cvsroot/src/sbin/mount_isofs/Attic/Makefile,v 1.3 1993/03/23 00:28:58 cgd Exp $
+#	$Id: Makefile,v 1.3.2.1 1993/07/20 00:51:01 cgd Exp $
 
 PROG = mount_isofs
-NOMAN = noman
 
 .include <bsd.prog.mk>
