--- a/usr.bin/tn3270/tn3270/Makefile
+++ b/usr.bin/tn3270/tn3270/Makefile
@@ -1,4 +1,4 @@
-# $Header: /cvsroot/src/usr.bin/tn3270/tn3270/Attic/Makefile,v 1.4 1993/04/29 11:06:05 cgd Exp $
+# $Header: /cvsroot/src/usr.bin/tn3270/tn3270/Attic/Makefile,v 1.4.2.1 1993/07/21 09:04:07 cgd Exp $
 
 .include <../../Makefile.inc>
 
@@ -52,7 +52,7 @@ disp_asc.OUT: ${.CURDIR}/../tools/mkdstoas/obj/mkdstoas
 	ln -s disp_asc.OUT disp_asc.out
 
 inbound.o: kbd.OUT
-CLEANFILES += kbd.OUT kbd.out
+CLEANFILES += TMPfunc.out kbd.OUT kbd.out
 kbd.OUT: ${.CURDIR}/../ctlr/hostctlr.h ${.CURDIR}/../ctlr/${KBD} \
 	 ${.CURDIR}/../tools/mkhits/obj/mkhits
 	${CC} ${CFLAGS} -E ${.CURDIR}/../ctlr/function.c > TMPfunc.out
