--- a/usr.bin/tn3270/tn3270/Makefile
+++ b/usr.bin/tn3270/tn3270/Makefile
@@ -1,10 +1,14 @@
-# $Header: /cvsroot/src/usr.bin/tn3270/tn3270/Attic/Makefile,v 1.4.2.1 1993/07/21 09:04:07 cgd Exp $
+# $Header: /cvsroot/src/usr.bin/tn3270/tn3270/Attic/Makefile,v 1.4.2.2 1993/07/21 15:15:24 cgd Exp $
 
 .include <../../Makefile.inc>
 
 CFLAGS += -I${.CURDIR} -I.
-LDADD += -lcrypt -lcurses -ltermcap -ltelnet
-DPADD += ${LIBCRYPT} ${LIBCURSES} /usr/lib/libtermcap.a /usr/lib/libtelnet.a
+LDADD += -lcurses -ltermcap -ltelnet
+DPADD += ${LIBCURSES} /usr/lib/libtermcap.a /usr/lib/libtelnet.a
+.ifndef EXPORTABLE_SYSTEM
+DPADD+= ${LIBCRYPT}
+LDADD+= -lcrypt
+.endif
 
 MAN1 = tn3270.0
 
